Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.18.1
-
None
Description
The C proactor allows the user to configure a connection before it is bound to a transport, but does not allow configuring the transport before binding. Some security configurations require this.
Modify the proactor API to give access to both the connection and the transport before the are bound together.
Attachments
Issue Links
- blocks
-
PROTON-1682 SASL auth with GSSAPI fails: hostname is not set
- Closed