PROTON-1717 [C proactor] Make changes backward compatible.

Restore original signatures for pn_proactor_connect and pn_listener_accept.
Introduce pn_proactor_connect2 and pn_listener_accept2 taking a transport parameter.